<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">My web Store Inventory</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a Product</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">ADD A NEW PRODUCT</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">QUANTITY</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_inventory">INVENTORY</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">PRODUCT</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_vendor">VENDOR</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">QUANTITY</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_phone">PHONE</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">PRICE</string>

</resources>
