<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_product_vendor"
                style="@style/EditorFieldStyle"
                android:hint="VENDOR"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_product_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_phone"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_quantity"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
